		* fix preview of data with header
		* Ask how to treat multilayer graphs when opening OPJ project
		* Improve error message handling
		* Improve livedata import
		* Add possibility to specify custom column datatypes (mandatory for livedata)
		* Notify about the unsupported UTF16 encoding (BUG 496215)
		* Faster import of big ASCII files on Windows
	* [analysis]
		* Add possibility to do calculations on curves
		* Automatically recalculate analysis curves on data change
	* [spreadsheet]
		* support periodic and random sampling as function: psample(n;x), rsample(x)
		* save the properties used to generate random values in the column for later re-use
		* allow to perform the distribution fit to the data directly from the spreadsheet
	* [worksheet] 
		* new visualization types:
			* Process Behavior Chart
			* Run Chart
		* more space for plots and less "ink" - no layout spacings, no minor grid lines, not plot borders, no ticks on secondary axes on default
		* allow to provide names for plot ranges for easier lookup and assignemnt in the plot elements
		* new option to use plot's main color (line, symbol, etc.) for the color of the name text shown in the legend
		* fix inverse axis scale for Arrhenius plots

Performance improvements:
	* Made big spreadsheet (millions of cells) more responsive when selecting columns via the spreadsheet header

Bug fixes:
	* Fix crash selecting "cell" from function list in function dialog
	* Properly draw the border line of the symbol in the legend (BUG 491310)
	* Show Ticks on inverted axes (BUG 491502 & 492475)
	* Fix add/subtract value functionality in Matrix (BUG 493523)
	* Fix wrong font size in the plot legend (BUG 493017) and in the axis title (BUG 472982)
	* Don't overwrite OPJ files when saving (BUG 496480)
	* Fixed the text cursor jumping to the beginning of the line when typing in text in the note (BUG 497029)

Internal:
	* use name LabPlot/labplot consistenly (renamed LabPlot2/labplot2)
	* switch to Qt6 only