@@ -146,7 +146,7 @@ QMenu* Column::createContextMenu() {
 	// later, once we have some actions in the menu also for MQTT topics we'll
 	// need to explicitly to dynamic_cast for MQTTTopic
 	if (firstAction) {
-		if (parentAspect()->type() == AspectType::Spreadsheet) {
+		if (parentAspect()->inherits(AspectType::Spreadsheet)) {
 			auto* spreadsheet = static_cast<Spreadsheet*>(parentAspect());
 			spreadsheet->fillColumnContextMenu(menu, this);
 		} else if (parentAspect()->type() == AspectType::Notebook) {
